objects/Delivery__c.object
<CustomObject>
    <description>A unit of credit delivery, previously known as a &quot;job.&quot;</description>
    <fields>
        <fullName>DeliveryDescription__c</fullName>
        <label>Delivery Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DeliveryEID__c</fullName>
        <description>The Enterprise ID for this Delivery record.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this Delivery record.</inlineHelpText>
        <label>Delivery EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Deliveries</relationshipLabel>
        <relationshipName>Deliveries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Delivery</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Delivery Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deliveries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>